# Colecci-n-de-Ejercicios-Flujo-C-

./: CMakeLists.txt  README.md
Ejercicio 1/: main.cpp  matematicas.cpp  matematicas.h
Ejercicio 3/: circulo.cpp  circulo.h  main.cpp
Ejercicio2/: circulo.h  cuadrado.h  main.cpp  rectangulo.h  rombo.h  triangulo.h
Ejercicio4/: ciencias.h  main.cpp
Ejercicio5/: main.cpp
