cmake_minimum_required(VERSION 3.26)
project(Colecci-n-de-Ejercicios-Flujo-C-)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio_1
        "Ejercicio 1/main.cpp"
        "Ejercicio 1/matematicas.cpp"
        "Ejercicio 1/matematicas.h"
        "Ejercicio 1/matematicas.cpp"
        "Ejercicio 1/main.cpp"
        "Ejercicio 1/matematicas.cpp"
        "Ejercicio 1/matematicas.h"
)